--- a/mainapp/android/app/build.gradle
+++ b/mainapp/android/app/build.gradle
@@ -58,6 +58,27 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    flavorDimensions "default"
+
+    productFlavors {
+        dev {
+            dimension "default"
+            resValue "string", "app_name", "Booking-dev"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+        }
+        staging {
+            dimension "default"
+            resValue "string", "app_name", "Booking-staging"
+            applicationIdSuffix ".staging"
+            versionNameSuffix "-staging"
+        }
+        prod {
+            dimension "default"
+            resValue "string", "app_name", "Booking"
+        }
+    }
 }
 
 flutter {
