--- a/mainapp/android/app/build.gradle
+++ b/mainapp/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
         applicationId "com.example.ui_ux_pet"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -85,4 +85,9 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation("androidx.core:core-splashscreen:1.0.1")
+    def appcompat_version = "1.3.1"
+
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+}
