--- a/mainapp/pubspec.yaml
+++ b/mainapp/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  shared_preferences: ^2.2.1
+  equatable: ^2.0.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
