--- a/mainapp/pubspec.yaml
+++ b/mainapp/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.4
+  formz: ^0.6.0
 
   erifaz_ds:
     path: ../erifaz_ds
